<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="viewStart"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/text_settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/body_text_color" />

    <Button
        android:id="@+id/button_clearHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_ClearHistory_title"
        android:text="@string/button_clear_history"
        android:textColor="@color/body_text_color" />

    <TextView
        android:id="@+id/text_ClearHistory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_clearHistory"
        android:layout_below="@+id/text_settingsTitle"
        android:layout_marginTop="15dp"
        android:text="@string/clear_history_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/body_text_color" />

    <TextView
        android:id="@+id/text_radio_AuthType_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox_UseEncryption"
        android:layout_below="@+id/button_clearHistory"
        android:layout_marginTop="15dp"
        android:text="@string/radio_authtype_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/body_text_color" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_clearHistory"
        android:layout_below="@+id/text_radio_AuthType_title"
        android:layout_marginTop="15dp"
        android:checkedButton="@+id/radio_AuthType_None"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_AuthType_Pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_pin_label"
            android:textColor="@color/body_text_color" />

        <RadioButton
            android:id="@+id/radio_AuthType_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_pass_label"
            android:textColor="@color/body_text_color" />

        <RadioButton
            android:id="@+id/radio_AuthType_None"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_none_label"
            android:textColor="@color/body_text_color" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox_UseEncryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_ChangePinPass"
        android:layout_below="@+id/button_ChangePinPass"
        android:layout_marginTop="15dp"
        android:text="@string/checkBox_UseEncryption_label"
        android:textColor="@color/body_text_color" />

    <Button
        android:id="@+id/button_ChangePinPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="15dp"
        android:text="@string/button_ChangePinPass"
        android:textColor="@color/body_text_color" />

</RelativeLayout>