<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="viewStart"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/text_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:textColor="@color/body_text_color" />

    <Button
        android:id="@+id/button_SendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/text_Message"
        android:text="@string/button_send_text" />

    <EditText
        android:id="@+id/text_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_SendMessage"
        android:layout_alignLeft="@+id/text_PhoneNumber"
        android:layout_alignRight="@+id/text_PhoneNumber"
        android:ems="10"
        android:gravity="left|start"
        android:height="100dp"
        android:hint="@string/message_box_hint"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:textColor="@color/body_text_color" />

    <Button
        android:id="@+id/button_OpenSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_SendMessage"
        android:layout_alignBottom="@+id/button_SendMessage"
        android:layout_alignLeft="@+id/text_Message"
        android:background="@drawable/settings"
        android:minHeight="30dp"
        android:minWidth="30dp" />

    <EditText
        android:id="@+id/text_History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_Message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_PhoneNumber"
        android:ems="10"
        android:enabled="false"
        android:gravity="left|start"
        android:hint="@string/history_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/body_text_color" >

        <requestFocus />
    </EditText>

</RelativeLayout>