<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_PinMainWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_gradient"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayour_PinHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/page_header_bacgkround_color"
        android:minHeight="50dp"
        android:padding="5dp" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_PinWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayour_PinHeader"
        android:background="@color/main_background_color"
        android:clickable="false"
        android:textAlignment="viewStart"
        tools:context=".LoginActivity" >

        <TextView
            android:id="@+id/text_LoginPasswordPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_LoginLogo"
            android:layout_centerHorizontal="true"
            android:text="@string/login_password_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/body_text_color_dark" />

        <ImageView
            android:id="@+id/image_LoginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="115dp"
            android:contentDescription="@string/image_description_logo"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_LoginPasswordPrompt"
            android:layout_centerHorizontal="true"
            android:padding="5dp" >

            <EditText
                android:id="@+id/text_LoginPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:minWidth="150dp"
                android:singleLine="true"
                android:textColor="@color/body_text_color"
                android:textColorHint="@color/body_text_color" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button_LoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:onClick="authenticate"
                android:text="@string/button_Authenticate"
                android:textColor="@color/body_text_color_dark" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>