<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_gradient"
    android:clickable="false"
    android:textAlignment="viewStart"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/text_LoginPasswordPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/login_pin_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/body_text_color_dark" />

    <ImageView
        android:id="@+id/image_LoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_LoginPasswordPrompt"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description_logo"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/pin_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_LoginPasswordPrompt"
        android:layout_centerHorizontal="true"
        android:padding="5dp" >

        <EditText
            android:id="@+id/text_LoginPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="numberPassword"
            android:textColor="@color/body_text_color"
            android:textColorHint="@color/body_text_color" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_LoginTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:layout_marginBottom="16dp"
            android:layout_toRightOf="@+id/text_LoginPin"
            android:onClick="authenticate"
            android:text="@string/button_Authenticate"
            android:textColor="@color/body_text_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/pin_bar_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/page_header_bacgkround_color"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/page_header_bacgkround_color"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_rule_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pin_bar_top"
        android:background="@color/body_text_color_dark"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_rule_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/pin_bar_bottom"
        android:layout_alignParentLeft="true"
        android:background="@color/body_text_color_dark"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>