<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:clickable="false"
    android:textAlignment="viewStart"
    tools:context=".MainActivity" >
    
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c7c7c7"
        android:minHeight="50dp"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_description_logo"
            android:src="@drawable/ic_launcher"
            android:onClick="openThreads"/>

        <Button
            android:id="@+id/button_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/settings"
            android:minHeight="30dp"
            android:minWidth="30dp"
            android:onClick="openSettings"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button_SendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/text_PhoneNumber"
        android:text="@string/button_send_text"
        android:textColor="@color/body_text_color_dark" />

    <EditText
        android:id="@+id/text_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout1"
        android:background="@drawable/list_item_gradient"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:minHeight="20dp"
        android:padding="5dp"
        android:textColor="@color/body_text_color_dark"
        android:textColorHint="@color/body_text_color_dark" >

        <requestFocus />
    </EditText>

    <LinearLayout android:id="@+id/rule_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/text_Message"
        android:layout_centerHorizontal="true"
        android:background="@color/list_item_divider_color"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout android:id="@+id/rule_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/text_PhoneNumber"
        android:layout_centerHorizontal="true"
        android:background="@color/list_item_divider_color"
        android:orientation="vertical" >

    </LinearLayout>

    <EditText
        android:id="@+id/text_History"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rule_2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule_1"
        android:background="@drawable/list_item_gradient"
        android:ems="10"
        android:focusable="false"
        android:gravity="left|start"
        android:hint="Message history empty."
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textColor="@color/body_text_color"
        android:textColorHint="@color/body_text_color" />

    <EditText
        android:id="@+id/text_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_SendMessage"
        android:layout_centerHorizontal="true"
        android:background="@drawable/list_item_gradient"
        android:ems="10"
        android:gravity="left|start"
        android:hint="Message Body"
        android:inputType="textMultiLine"
        android:lines="3"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/body_text_color"
        android:textColorHint="@color/body_text_color" />

</RelativeLayout>